# coeus

./: .gitignore  CLAUDE.md  README.md  __init__.py  config.py  embedders.py  main.py  mcp_server.py  pyproject.toml
.aim/: legacy-reference.md  memory.jsonl
coeus/: artifacts.py  experiment.py  runner.py  store.py
coeus/corpus/: ingest.py
coeus/evaluation/: dataset.py  evaluator.py  metrics.py
coeus/interfaces/: cli.py  common.py  mcp.py
coeus/retrieval/: baseline.py  stages.py
core/: __init__.py  ast_chunker.py  budgeter.py  contextualizer.py  extractor.py  fastpath.py  hypothesizer.py  ingestor.py  job_manager.py  oracle.py  pricing.py  setup.py
docs/: GUIDE.md  coeus-critical-evaluation-debate.md  kronos_insights_consolidated.md
docs/archive/legacy-coeus/: README.md
docs/archive/legacy-coeus/docs/: GUIDE.md  QUICKSTART.md
docs/archive/legacy-coeus/root/: CLAUDE.md  README.md
docs/plans/: 2026-03-01-ast-aware-chunking.md  2026-03-01-coeus-setup-and-onboarding.md  2026-03-22-coeus-research-rewrite-design.md  2026-03-22-coeus-research-rewrite-implementation.md  2026-03-22-rewrite-cutover-implementation.md
storage/: __init__.py  interface.py  zvec_store.py
tests/: test_ast_chunker.py  test_cutover_layout.py  test_rewrite_ingest.py  test_rewrite_interfaces.py  test_rewrite_runner.py  test_rewrite_store.py  test_setup.py
tests/fixtures/corpus/: README.md
tests/fixtures/corpus/auth_repo/: auth.py
tests/fixtures/evaluation/: README.md  eval.jsonl
utils/: __init__.py  file_io.py  stemmer.py
watcher/: __init__.py  watcher.py
(+2 files in other folders)
