[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coeus"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = ["mcp"]

[project.scripts]
coeus = "coeus.interfaces.cli:main"
coeus-mcp = "coeus.interfaces.mcp:main"

[tool.setuptools.packages.find]
include = ["coeus*"]
